@@ -276,6 +276,9 @@ fix_feather_fall_affects_guards = true
 ; If the prince has only one hit point when he defeats Jaffar, it stops blinking.
 fix_one_hp_stops_blinking = true
 
+; If the prince or a guard falls to his death onto a loose floor, the floor drops, but the body stays there in the air.
+fix_dead_floating_in_air = true
+
 
 [CustomGameplay]
 ; Turn on customization options.
