@@ -780,3 +780,5 @@ FIXED: Added a configurable fix for: Feather fall should not affect guards, beca
 	Details: See FIX_FEATHER_FALL_AFFECTS_GUARDS in config.h and https://github.com/NagyD/SDLPoP/issues/337
 FIXED: Added a configurable fix for: If the prince has only one hit point when he defeats Jaffar, it stops blinking.
 	Details: See FIX_ONE_HP_STOPS_BLINKING in config.h and https://github.com/NagyD/SDLPoP/issues/338
+FIXED: Added a configurable fix for: If the prince or a guard falls to his death onto a loose floor, the floor drops, but the body stays there in the air.
+	Details: See FIX_DEAD_FLOATING_IN_AIR in config.h and https://github.com/NagyD/SDLPoP/issues/343
